--- a/conf/accounts.yaml
+++ b/conf/accounts.yaml
@@ -2,38 +2,49 @@ formats:
   handelsbanken:
     column-sequence: ["Date", None, "Details", None, "Money out", None, "Money in", None, "Balance"]
     columns:
-      date: Date
-      payee: Details
+      date:    Date
+      payee:   Details
       credits: Money in
-      debits: Money out
-    name: HB current statement
+      debits:  Money out
+      balance: Balance
+    name:      HB current statement
   financisto:
     column-sequence: ["date", "time", "account", "amount", "currency", "original amount", "original currency", "category", "parent", "payee", "location", "project", "note"]
     columns:
-      date: date
-      payee: payee
-      amount: amount
+      date:    date
+      payee:   payee
+      amount:  amount
       credits: amount
       account: account
+    name:      Financisto export
   combined:
-    column-sequence: ["date", "time",
-                      "HB current", "HB current statement", "HB savings",
-                      "Co-op current", "Co-op savings",
-                      "Sterling cash", "Lek cash", "Euro cash", "Kronor cash",
-                      Categorical Imperative, "Skipped snacks", "Unknown",
-                      "category", "parent", "payee", "location", "project", "note"]
+    column-sequence: [date, time,
+                      HB current, HB Balance, HB current statement, HB current statement balance, HB savings,
+                      Co-op current, Co-op savings,
+                      Sterling cash, Lek cash, Koruna cash, Euro cash, Kronor cash,
+                      Categorical Imperative, Skipped snacks, Dart, Unknown,
+                      category, parent, payee, location, project, note]
     columns:
-      date: date
-      payee: payee
+      date:    date
+      payee:   payee
+      balance:
+        HB current statement: HB_cur_s_balance
+      HB_cur_s_balance: HB current statement balance
+      name:    Combined data
       # map account names in Financisto to our column names:
       amount:
         Sterling cash:                 Sterling cash
         Lek cash:                      Lek cash
+        Czech Koruna cash:             Koruna cash
         Euro cash:                     Euro cash
+        US dollars cash:               US dollars cash
         Co-op current account:         Co-op current
         Co-op savings:                 Co-op savings
         Handelsbanken current account: HB current
+        HB current statement:          HB current statement
         Handelsbanken savings:         HB savings
+        BoI current:                   BoI current
         Unknown:                       Unknown
         Snacks not bought:             Skipped snacks
         Categorical Imperative:        CatImp
+        Dart crossing:                 Dart
