--- a/conf/accounts.yaml
+++ b/conf/accounts.yaml
@@ -8,15 +8,23 @@ formats:
       credits: Money in
       debits:  Money out
       balance: Balance
+    currency:  GBP
     name:      HB current statement
   financisto:
     column-sequence: ["date", "time", "account", "amount", "currency", "original amount", "original currency", "category", "parent", "payee", "location", "project", "note"]
     columns:
-      date:    date
-      payee:   payee
-      amount:  amount
-      credits: amount
-      account: account
+      date:     date
+      payee:    payee
+      amount:   amount
+      credits:  amount
+      account:  account
+      currency: currency
+      category: category
+      parent:   parent
+      project:  project
+    column-defaults:
+      project: No project
+      time:    04:00:00
     name:      Financisto export
   combined:
     column-sequence: [date, time,
