Add documentation formatting to Makefile

--- a/qs/Makefile
+++ b/qs/Makefile
@@ -1,4 +1,9 @@
 #!/usr/bin/make
 
+all: prepare_financisto README.pdf
+
 prepare_financisto: prepare_financisto.c
 	gcc -o prepare_financisto prepare_financisto.c
+
+README.pdf: README.md
+	pandoc -o README.pdf README.md
