Improve for testing

--- a/conf/accounts.yaml
+++ b/conf/accounts.yaml
@@ -9,7 +9,7 @@ formats:
       debits:  Money out
       balance: Balance
     currency:  GBP
-    name:      HB current statement
+    name:      Handelsbanken current account
   financisto:
     column-sequence: ["date", "time", "account", "amount", "currency", "original amount", "original currency", "category", "parent", "payee", "location", "project", "note"]
     columns:
