Conversion almost all working now, must needs to alter a few more payee names

--- a/conf/accounts.yaml
+++ b/conf/accounts.yaml
@@ -12,23 +12,32 @@ formats:
     name:      HB current statement
     currency_conversion: "^([A-Za-z ]+) +[0-9][0-9][0-9][0-9] ([A-Z][A-Z][A-Z]) ([0-9.]+).+"
   financisto:
-    column-sequence: ["date", "time", "account", "amount", "currency", "original amount", "original currency", "category", "parent", "payee", "location", "project", "note"]
+    column-sequence:     ["date", "time", "account", "amount", "currency", "original amount", "original currency", "category", "parent", "payee", "location", "project", "note"]
     columns:
-      date:     date
-      time:     time
-      payee:    payee
-      amount:   amount
-      credits:  amount
-      account:  account
-      currency: currency
-      category: category
-      parent:   parent
-      project:  project
-      message:  note
+      date:              date
+      time:              time
+      payee:             payee
+      amount:            amount
+      original_amount:   original amount
+      credits:           amount
+      account:           account
+      original_currency: original currency
+      currency:          currency
+      category:          category
+      parent:            parent
+      project:           project
+      message:           note
+    transfer-handling:
+      credit:
+        location:        Transfer In
+      debit:
+        location:        Transfer Out
     column-defaults:
-      project: No project
-      time:    04:00:00
-    name:      Financisto export
+      original_currency: GBP
+      currency:          GBP
+      project:           No project
+      time:              04:00:00
+    name:                Financisto export
   Default:
     column-sequence: ["date", "time", "account", "amount", "currency", "original amount", "original currency", "category", "parent", "payee", "location", "project", "note"]
     columns:
