--- a/conf/accounts.yaml
+++ b/conf/accounts.yaml
@@ -11,6 +11,18 @@ formats:
     currency:  GBP
     name:      HB current statement
     currency_conversion: "^([A-Za-z ]+) +[0-9][0-9][0-9][0-9] ([A-Z][A-Z][A-Z]) ([0-9.]+).+"
+  handelsbanken-raw:
+    # column-sequence: ["Account", "Date", None, "Details", None, "Money out", None, "Money in", None, "Balance"]
+    column-sequence: ["Account", "Date", "Details", "Money out", "Money in", "Balance"]
+    columns:
+      date:    Date
+      payee:   Details
+      credits: Money in
+      debits:  Money out
+      balance: Balance
+    currency:  GBP
+    name:      HB current statement
+    currency_conversion: "^([A-Za-z ]+) +[0-9][0-9][0-9][0-9] ([A-Z][A-Z][A-Z]) ([0-9.]+).+"
   financisto:
     column-sequence:     ["date", "time", "account", "amount", "currency", "original amount", "original currency", "category", "parent", "payee", "location", "project", "note"]
     columns:
