Get itemized tooltips working

--- a/conf/accounts.yaml
+++ b/conf/accounts.yaml
@@ -51,7 +51,7 @@ formats:
       time:              04:00:00
     name:                Financisto export
   Default:
-    column-sequence: ["date", "time", "account", "amount", "currency", "original_amount", "original_currency", "balance", "payee", "category", "project", "message", "combicount"]
+    column-sequence: ["date", "time", "account", "amount", "currency", "original_amount", "original_currency", "balance", "payee", "category", "project", "item", "message", "combicount"]
     columns:
       date:     date
       time:     time
@@ -63,6 +63,7 @@ formats:
       category: category
       parent:   parent
       project:  project
+      item:     item
       message:  note
     column-defaults:
       project: No project
