add bible channel

--- a/requirements.in
+++ b/requirements.in
@@ -1,6 +1,10 @@
 cssutils
 dobishem
 expressionive
+orgbookchapterverse
+coimealta
+tabular_page_maker
+timetable_announcer
 frozendict
 inotify
 matplotlib
